# fishfyi-rs

./: Cargo.toml  README.md
src/: lib.rs
